tests/common/negative/01_domain_frame_syntax.fpy
@@target python_3

# NEGATIVE TEST: Frame syntax in domain should fail Python
# Expected error: SyntaxError: invalid syntax

@@system NegativeTest {
    domain:
        var count: int = 0

    machine:
        $Ready { }
}

if __name__ == '__main__':
    pass
